--- a/index.html
+++ b/index.html
@@ -1,6 +1,29 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+body
+{
+	background-image: url("htpm.jpg");
+	background-size: 100%;
+}
+#title
+{
+	font-family: sans-serif;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 2%;
+	width: 50%;
+	text-align: center;
+	color: #222222;
+	font-size: 4em;
+	letter-spacing: 4px;
+	font-weight: 900;
+
+}
+</style>
+</head>
 <body>
-<div>hello</div>
+<div id="title">Holy Trinity, Saint Paul, and Saint Mary Parishes</div>
 </body>
 </html>
