--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@ body
 	font-family: sans-serif;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 2%;
-	width: 50%;
+	margin-top: 0px;
+	width: 100%;
 	text-align: center;
 	color: #326936;
-	font-size: 3em;
+	font-size: 2em;
 	letter-spacing: 4px;
 	font-weight: 900;
 
